# Adafruit_IO_Python

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  README.rst  ez_setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
Adafruit_IO/: __init__.py  _version.py  client.py  errors.py  model.py  mqtt_client.py
docs/: api.rst  conf.py  data.rst  examples.rst  feed-sharing.rst  feeds.rst  groups.rst  index.rst  integrations.rst  quickstart.rst
examples/: mqtt_client.py  mqtt_subscribe.py  mqtt_viewall.py  simple.py  test.py
examples/aio_basics/: adafruitio_00_publish.py  adafruitio_01_subscribe.py  adafruitio_04_location.py  adafruitio_06_digital_in.py  adafruitio_07_digital_out.py  adafruitio_17_time.py
examples/api/: air_quality.py  air_quality_create_delete.py  data.py  feeds.py  location.py  random_data.py  simple.py  weather.py  weather_create_delete.py
examples/basics/: analog_in.py  analog_output.py  darkskies.py  darksky.py  dashboard.py  digital_in.py  digital_out.py  environmental_monitor.py  location.py  neopixel.py  pi_camera.py  publish.py  rgb_led.py  servo.py  subscribe.py  temp_humidity.py  time-topics.py  time.py  time_topics.py  type-conversion.py  type_conversion.py
examples/mqtt/: mqtt_air_quality.py  mqtt_client.py  mqtt_client_class.py  mqtt_group_subscribe.py  mqtt_groups_pubsub.py  mqtt_groups_pusbsub.py  mqtt_shared_feeds.py  mqtt_subscribe.py  (+3 more)
tests/: README.txt  base.py  test_client.py  test_data.py  test_errors.py  test_model.py  test_mqtt_client.py  test_setup.py
